# delaunay-triangulator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  conanfile.txt  main.cpp
include/: CMakeLists.txt  edge.hpp  incremental.hpp  numerics.hpp  point.hpp  triangle.hpp
src/: CMakeLists.txt
src/include/: edge.hpp  flip.hpp  incremental.hpp  numerics.hpp  point.hpp  triangle.hpp
tests/: CMakeLists.txt  conan_tests.cpp  tests.cpp  tests.hpp  tests_edge.cpp  tests_edge.hpp  tests_flip.hpp  tests_incremental.cpp  tests_incremental.hpp  tests_numeric.hpp  tests_point.cpp  tests_point.hpp  tests_triangle.cpp  tests_triangle.hpp
tri/: marching-cube.cpp  tri.hpp
