cmake_minimum_required(VERSION 3.0)
project(triangulation)
set(CMAKE_CXX_STANDARD 17)

if(NOT EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    if(NOT EXISTS conanfile.py)
        file(COPY conanfile.py DESTINATION ${CMAKE_BINARY_DIR})
    endif()
    execute_process(COMMAND conan install . -s build_type=Debug --install-folder=${CMAKE_BINARY_DIR})
endif()
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

add_subdirectory(src)
add_subdirectory(tests)